--- a/Create-Table-in-React/package.json
+++ b/Create-Table-in-React/package.json
@@ -8,15 +8,28 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "concurrently \"npm run start-dist\" \"npm run start-db\" \"npm run start-records\" \"npm run start-server-cjs\" \"npm run start-backend\"",
+    "start-dist": "cd dist && http-server",
+    "start-db": "json-server --watch db.json",
+    "start-records": "json-server --watch records.json --port 4000",
+    "start-server-cjs": "node server.cjs",
+    "start-backend": "cd my-backend && node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.1",
     "react-select": "^5.8.0"
